// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMimeMessage should generate correct message: BLIND rec5@mailchain.local 1`] = `
"MIME-Version: 1.0
Date: Mon, 06 Jun 2022 00:00:00 +0000
Message-ID: 123@mailchain.local
Subject: =?UTF-8?B?U3ViamVjdCDwn6Sj8J+YsvCfpbPwn5iy8J+ls/CfmYIg5aSn5aSn5aSn5aSn?=
From: \\"1337\\" <1337@mailchain.com>
Reply-To: \\"7311\\" <7331@mailchain.com>
To: \\"rec1\\" <rec1@mailchain.local>,
 \\"rec2\\" <rec2@mailchain.local>
Cc: \\"rec3\\" <rec3@mailchain.local>,
 \\"rec4\\" <rec4@mailchain.local>
Bcc: \\"rec5\\" <rec5@mailchain.local>
Content-Type: multipart/alternative; boundary=\\"boundary\\"

--boundary
Content-Type: text/html; charset=\\"UTF-8\\"
Content-Transfer-Encoding: base64

bGluZSAxCmxpbmUyCgpsaW5lNCDwn6Sj8J+YsvCfpbPwn5iy8J+ls/CfmYI=
--boundary
Content-Type: text/plain; charset=\\"UTF-8\\"
Content-Transfer-Encoding: base64

bGluZSAxCmxpbmUyCgpsaW5lNA==
--boundary"
`;

exports[`createMimeMessage should generate correct message: BLIND rec6@mailchain.local 1`] = `
"MIME-Version: 1.0
Date: Mon, 06 Jun 2022 00:00:00 +0000
Message-ID: 123@mailchain.local
Subject: =?UTF-8?B?U3ViamVjdCDwn6Sj8J+YsvCfpbPwn5iy8J+ls/CfmYIg5aSn5aSn5aSn5aSn?=
From: \\"1337\\" <1337@mailchain.com>
Reply-To: \\"7311\\" <7331@mailchain.com>
To: \\"rec1\\" <rec1@mailchain.local>,
 \\"rec2\\" <rec2@mailchain.local>
Cc: \\"rec3\\" <rec3@mailchain.local>,
 \\"rec4\\" <rec4@mailchain.local>
Bcc: \\"rec6\\" <rec6@mailchain.local>
Content-Type: multipart/alternative; boundary=\\"boundary\\"

--boundary
Content-Type: text/html; charset=\\"UTF-8\\"
Content-Transfer-Encoding: base64

bGluZSAxCmxpbmUyCgpsaW5lNCDwn6Sj8J+YsvCfpbPwn5iy8J+ls/CfmYI=
--boundary
Content-Type: text/plain; charset=\\"UTF-8\\"
Content-Transfer-Encoding: base64

bGluZSAxCmxpbmUyCgpsaW5lNA==
--boundary"
`;

exports[`createMimeMessage should generate correct message: ORIGINAL 1`] = `
"MIME-Version: 1.0
Date: Mon, 06 Jun 2022 00:00:00 +0000
Message-ID: 123@mailchain.local
Subject: =?UTF-8?B?U3ViamVjdCDwn6Sj8J+YsvCfpbPwn5iy8J+ls/CfmYIg5aSn5aSn5aSn5aSn?=
From: \\"1337\\" <1337@mailchain.com>
Reply-To: \\"7311\\" <7331@mailchain.com>
To: \\"rec1\\" <rec1@mailchain.local>,
 \\"rec2\\" <rec2@mailchain.local>
Cc: \\"rec3\\" <rec3@mailchain.local>,
 \\"rec4\\" <rec4@mailchain.local>
Bcc: \\"rec5\\" <rec5@mailchain.local>,
 \\"rec6\\" <rec6@mailchain.local>
Content-Type: multipart/alternative; boundary=\\"boundary\\"

--boundary
Content-Type: text/html; charset=\\"UTF-8\\"
Content-Transfer-Encoding: base64

bGluZSAxCmxpbmUyCgpsaW5lNCDwn6Sj8J+YsvCfpbPwn5iy8J+ls/CfmYI=
--boundary
Content-Type: text/plain; charset=\\"UTF-8\\"
Content-Transfer-Encoding: base64

bGluZSAxCmxpbmUyCgpsaW5lNA==
--boundary"
`;

exports[`createMimeMessage should generate correct message: VISIBLE 1`] = `
"MIME-Version: 1.0
Date: Mon, 06 Jun 2022 00:00:00 +0000
Message-ID: 123@mailchain.local
Subject: =?UTF-8?B?U3ViamVjdCDwn6Sj8J+YsvCfpbPwn5iy8J+ls/CfmYIg5aSn5aSn5aSn5aSn?=
From: \\"1337\\" <1337@mailchain.com>
Reply-To: \\"7311\\" <7331@mailchain.com>
To: \\"rec1\\" <rec1@mailchain.local>,
 \\"rec2\\" <rec2@mailchain.local>
Cc: \\"rec3\\" <rec3@mailchain.local>,
 \\"rec4\\" <rec4@mailchain.local>
Content-Type: multipart/alternative; boundary=\\"boundary\\"

--boundary
Content-Type: text/html; charset=\\"UTF-8\\"
Content-Transfer-Encoding: base64

bGluZSAxCmxpbmUyCgpsaW5lNCDwn6Sj8J+YsvCfpbPwn5iy8J+ls/CfmYI=
--boundary
Content-Type: text/plain; charset=\\"UTF-8\\"
Content-Transfer-Encoding: base64

bGluZSAxCmxpbmUyCgpsaW5lNA==
--boundary"
`;
